corrections of warnings by java 9